# nectir-ai-research

./: .gitignore  LICENSE  README.md  utils.py
lapu-effect-ai-assistants-on-grade-outcomes/: README.md  configs-template.yaml  env.example  pyproject.toml
lapu-effect-ai-assistants-on-grade-outcomes/src/: 00-descriptive-statistics.py  01-mann-whitney-u-test.py  02-permutation-test.py  03-psm.py  04-psm-wilicoxon-signed-rank-test.py  05-psm-permutation-test.py  misc.py  preprocessing.py  psm.py
